<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FoodCoupUser</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_distance__maos_new">Distance_Maos_new</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Tap two locations in the map</string>
    <string name="str_tv_distance_time">Distance</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="save">SAVE</string>
    <string name="search_hint" tools:ignore="TypographyEllipsis">Search...</string>
    <string name="no_result_found">Results not found</string>
    <string name="select_country">Select a county</string>
    <string name="house_flat">HOUSE/FLAT/BLOCK NO.</string>
    <string name="landmark">Landmark : </string>
    <string name="save_as">SAVE AS</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <string name="work">Work</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="address">ADDRESS</string>
    <string name="change">CHANGE</string>
    <string name="current">Use Current Location</string>
    <string name="enable_location_service">Enable Location Service</string>
    <string name="change_locatin">Change Location</string>
    <string name="d_home">HOME</string>
    <string name="d_explore">EXPLORE</string>
    <string name="d_cart">CART</string>
    <string name="d_account">ACCOUNT</string>
    <string name="set_location">Set Location</string>
    <string name="offers">Offers</string>
    <string name="search_restaurant">Search for a restaurant or dish </string>
    <string name="filter_and_sort">Filter &amp; Sort by</string>
    <string name="vegonly">Veg Only</string>
    <string name="price_range">Price Range</string>
    <string name="rating">Rating</string>
    <string name="cuisines">Cuisines</string>
    <string name="see_all">See All</string>
    <string name="hot_sellers">HOT SELLERS</string>
    <string name="currency">₹ </string>
    <string name="preorder">PreOrder</string>
    <string name="currency_minus">-</string>
    <string name="rate_res">Rate Restaurant</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="rating_res_driver">Provide Rating</string>
    <string name="top_pic">Top Picks For You</string>
    <string name="great_offer">Great offers For You</string>
    <string name="top_category">Top category</string>
    <string name="Doorno">D.No : </string>
    <string name="paytm">currently Paytm UnAvailable</string>
    <string name="payumoney">currently PayUmoney UnAvailable</string>
    <string name="Landmark">Landmark : </string>
    <string name="noitem">No Item Found Please try Again</string>
    <string name="placeorder">Once your Order Accepted By Restaurant Other details load here in DashBoard view order Button is placed in Top</string>
    <string name="promocode">Enter valid PromoCode</string>
    <string name="promocodevalid">Promocode Is Valid</string>
    <string name="promocodeexpired">Promocode Is Expired</string>
    <string name="conform_logout">Are You Sure Want To Logout</string>
    <string name="pastorders">No Past Orders</string>
    <string name="fav">No Favourites</string>
    <string name="no_itemsfound">No Items Found </string>
    <string name="favouritelist">No Favourite Hotels</string>
    <string name="use_coad">USE CODE</string>
    <string name="all_restaurant">All Restaurants</string>
    <string name="view_on_map">View On Map</string>
    <string name="see_all_restaurant">See all Restaurant</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="add_note">Add a note (extra sauce,no onions, etc.,)</string>
    <string name="view_cart">VIEW CART</string>
    <string name="item">ITEM</string>
    <string name="qty">QTY</string>
    <string name="pendingorders">Pending Orders</string>
    <string name="item_carts">Item Carts</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">APPLY</string>
    <string name="bill_details">Bill Details</string>
    <string name="PayTm">PayTm</string>
    <string name="onlinepay">Online Payment</string>
    <string name="payUmoney">PayUMoney</string>
    <string name="cashon">Cash On Delivery</string>
    <string name="alreadyitem">Item already added in cart do You want to Clear</string>
    <string name="item_total">Item Total</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total_discount">Total Discount</string>
    <string name="taxes_and_charges">Taxes and Charges</string>
    <string name="to_pay">To Pay</string>
    <string name="unavailable">Currently UnAvailable</string>
    <string name="seem_to_new_location">You seem to be in a new location</string>
    <string name="multiple_address">Multiple address in this location </string>
    <string name="add_address_to_process">ADD ADDRESS TO PROCESS</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="select_address">SELECT ADDRESS</string>
    <string name="cart_change">Change</string>
    <string name="process_to_pay">PROCEED TO PAY</string>
    <string name="b_choose_address">Choose a delivery address</string>
    <string name="b_home">Home</string>
    <string name="b_other">Other</string>
    <string name="b_work">Work</string>
    <string name="b_add_new">ADD NEW ADDRESS</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="my_account">My Account</string>
    <string name="my_desc">Address,Payment,Favorites,Referrals</string>
    <string name="manage_address">Manage Address</string>
    <string name="payment">Payment</string>
    <string name="paymentmode">Choose Your Payment Mode</string>
    <string name="favorites">Favorites</string>
    <string name="referrals">Referrals</string>
    <string name="refcode">FoodCoup Referral Code(Optional)</string>
    <string name="refcodeuser">FoodCoup Referral Code</string>
    <string name="nocart">No Item In Cart</string>
    <string name="my_offers">Offers</string>
    <string name="help">Help</string>
    <string name="order_history">Order History</string>
    <string name="past_orders">Your Past Orders</string>
    <string name="your_orders">Your  Orders</string>
    <string name="reorder">Re Order</string>
    <string name="delete">Delete  </string>
    <string name="default_address">Default Address cannot Be delete </string>
    <string name="logout">LOGOUT</string>
    <string name="order_h">Order History</string>
    <string name="view">View More</string>
    <string name="saved_address">Saved Addresses</string>
    <string name="edit">Edit</string>
    <string name="restaurant_info">Restaurant Info</string>
    <string name="include_egg">Include Egg</string>
    <string name="veg_only">Veg Only</string>
    <string name="veg_nonveg">Veg/Nonveg</string>
    <string name="recommended">Recommended</string>
    <string name="add">ADD</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="every_day">Every Day</string>
    <string name="menu">MENU</string>
    <string name="nextavailable">Next Available Time : </string>
    <string name="r_referrals">Referrals</string>
    <string name="r_refer_frnd">Refer a friend &amp; we\'ll give you &amp; your buddy RS.50 off on your next orders above RS.250</string>
    <string name="r_invite">INVITE AND EARN</string>
    <string name="order_picked_up">Order</string>
    <string name="deliverypal">Your Delivery Pal</string>
    <string name="restaurants">Restaurants</string>
    <string name="hot_sellers_res">Hot Sellers Restaurant</string>
    <string name="ok_got_it">OK,GOT IT</string>
    <string name="ok">OK</string>
    <string name="instruction">Other Instruction</string>
    <string name="cancel">Cancel</string>
    <string name="wallet">Wallet</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="balance">Balance</string>
    <string name="withdraw">Transactions</string>
    <string name="recharge">Recharge</string>
    <string name="noorders">No Transactions</string>
    <string name="enter_amt">Enter Amount</string>
    <string name="enter_recharge">Enter the Amount to Recharge</string>
    <string name="device_location_off"> Device location off</string>
    <string name="location_improve"> Switch on your device location to improve your food ordering experience</string>
    <string name="no_thanks"> NO THANKS!</string>
    <string name="enable_location"> ENABLE LOCATION</string>
    <string name="f_apply">Apply</string>
    <string name="f_clearall">CLEAR ALL</string>
    <string name="f_clearcart">CLEAR CART</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="popularity">Popularity</string>
    <string name="rating_h_to_l">Rating : High To Low</string>
    <string name="delivery_t">Delivery Time</string>
    <string name="cost_l_to_h">Cost : Low To High</string>
    <string name="cost_h_to_l">Cost : High To Low</string>
    <string name="search_here">Search Here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estimated_arrival">Estimated Arrival</string>
    <string name="order_cancel">Sorry your Order Cancel</string>
    <string name="s1_title">Select Food Items</string>
    <string name="s2_title">Make Payments</string>
    <string name="s3_title">Fast &amp; Free Delivery</string>
    <string name="s1_desc">You can order what you need and were u need then enjoy your food  </string>
    <string name="s2_desc">your payment were more secure and its very easy to transaction</string>
    <string name="s3_desc">We deliver your items on time were u need and free delivery for you</string>
    <string name="next">NEXT</string>
    <string name="max_ord">Maximum order Value</string>
    <string name="reach">Couldnt reach Server Please try Again</string>
    <string name="skip">SKIP</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="preparation">PREPARATIONS</string>
    <string name="pricing">PRICING</string>
    <string name="addon">ADDON</string>
    <string name="submit">SUBMIT</string>
    <string name="alert_exit">Exit</string>
    <string name="alert_cancel">Cancel</string>
    <string name="login">LOGIN</string>
    <string name="otp">OTP</string>
    <string name="recent">Recent Search</string>
    <string name="recent_otp">RESEND OTP</string>
    <string name="count_time">Count Time</string>
    <string name="tryagain">Something Went wrong please Try Again</string>
    <string name="restaurant_rating">Restaurant Rating</string>
    <string name="driver_rating">Driver Rating</string>
    <string name="comments">Restaurant Comments</string>
    <string name="comment">Cancel Reason</string>
    <string name="comments_new">Comments</string>
    <string name="drivercomments">Driver Comments</string>
    <string name="order_pickedup">Ordered</string>
    <string name="order_res">Accepted</string>
    <string name="order_preparing">Reached</string>
    <string name="oredr_outFDelivery">Picked up</string>
    <string name="order_deivered">Delivered</string>
    <string name="order_processing"> Your Order Request Processing</string>
    <string name="offers_coupons">Offers/Coupons</string>
    <string name="use_wallet">Use Wallet</string>
    <string name="appcoup">AppCoup</string>
    <string name="_123456789_appcoup_gmail_com">123456789 - appcoup@gmail.com</string>
    <string name="todo">TODO</string>
</resources>