<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/rec_apply_btn_bg_green">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/offers" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <food.user.demand.FCViews.AC_Edittext
            android:id="@+id/edt_comment"
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/dashed_border_lite_gray"
            android:cursorVisible="true"
            android:hint="@string/comments_new"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            style="@style/FC_SmallThickTextView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_button_effect_red"
                android:text="@string/cancel"
                android:layout_margin="@dimen/_5ssp"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/_5ssp"
                android:background="@drawable/rec_apply_btn_bg_green"
                android:text="@string/submit"
                android:textColor="@color/white"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>