<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".FCFragment.FCDashboardFragment.FCAccountActivity.FCManageAddressActivity.FC_ManageAddressActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        tools:ignore="UselessParent">


        <ImageView
            android:id="@+id/img_backBtn"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_gravity="center|left"
            android:layout_marginStart="@dimen/_20ssp"
            android:src="@drawable/back"
            tools:ignore="ContentDescription,RtlHardcoded" />


        <food.user.demand.FCViews.AC_Textview
            style="@style/FC_BoldTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manage_address" />


    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/txt_lite_gray_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/txt_lite_gray_color"
        android:orientation="vertical">

        <food.user.demand.FCViews.AC_Textview
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            style="@style/FC_RegularTextView"
            android:padding="@dimen/_7sdp"
            android:text="@string/saved_address"/>

    </LinearLayout>

    <food.user.demand.FCViews.AC_Textview
        android:id="@+id/txt_addAddressToProcess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/ripple_button_effect_green"
        android:text="@string/b_add_new"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:padding="@dimen/_8sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>