<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/_20sdp">

    <food.user.demand.FCUtils.Loader.LoaderTextView
        android:id="@+id/lt_cancelrestaurantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_order"
        android:textColor="@color/alert_blue_bg"
        android:gravity="center"
        style="@style/FC_RegularThickTextView"
        android:visibility="visible"
        android:layout_marginTop="@dimen/_15ssp"
        android:layout_marginBottom="15sp"/>

    <LinearLayout
        android:id="@+id/ll_restaurantInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <food.user.demand.FCUtils.Loader.LoaderCircluarImageView
            android:id="@+id/lc_imgcancelRestaurant"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_100sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:orientation="vertical">

            <food.user.demand.FCUtils.Loader.LoaderTextView
                android:id="@+id/lt_cancelrestaurantname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FC_RegularThickTextView"
                android:visibility="visible"/>

            <food.user.demand.FCViews.AC_Edittext
                android:id="@+id/edt_cancelcomment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/view_item_outline"
                android:cursorVisible="true"
                android:hint="@string/comment"
                android:gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                style="@style/FC_SmallThickTextView"/>
        </LinearLayout>


    </LinearLayout>


    <food.user.demand.FCViews.AC_Textview
        android:id="@+id/txt_cancelsubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_reorder_effect_green"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/submit"
        android:padding="@dimen/_5sdp"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/white"
        android:visibility="visible"/>

</LinearLayout>